--- a/styles/blocks/_hero.scss
+++ b/styles/blocks/_hero.scss
@@ -1,7 +1,8 @@
 @use "../helpers" as *;
 
 .hero {
-  background-image: url("../images/welcome-bg.jpg");
+  background-image: url("../images/welcome-bg.jpg"),
+    url("https://i.postimg.cc/tJTVBGjn/welcome-bg.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
